# rcli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml  test.http
fixtures/: b64.out  blake3.key  chacha20poly1305.key  ed25519.pk  ed25519.sk  index.html  jwt.secret
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: b64.rs  csv.rs  gen_pass.rs  http.rs  jwt.rs  mod.rs  opts.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  jwt.rs  mod.rs  text.rs
src/process/crypto/: blake3.rs  chacha20poly1305.rs  ed25519.rs  mod.rs
