[package]
name = "rcli"
version = "0.1.0"
authors = ["Luffy2025"]
description = "A simple CLI tool written in Rust"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.9", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.5.4"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
enum_dispatch = "0.3.13"
humantime = "2.1.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["compression-full", "trace", "cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zxcvbn = "3.1.0"
